# Iifa

./: Cargo.toml  README.md  context.json  customer_params.json  dt.json
src/: app_data.rs  controllers.rs  dt_dao.rs  error.rs  main.rs  node.rs  predicate.rs  services.rs
src/controller/: decision_tree_controller.rs  dt_controller.rs  react_flow_controller.rs
src/domain/: customer_params.rs  decision_tree.rs  node.rs  predicate.rs
src/dto/: decision_tree_dtos.rs  react_flow_dtos.rs
src/service/: decision_tree_dao.rs  decision_tree_repository.rs  decison_tree_service.rs  dt_dao.rs  dt_service.rs  react_flow_service.rs
src/util/: file_util.rs
web/: package-lock.json  package.json
web/src/: App.tsx
web/src/components/pages/: DecisionTreeEditor.tsx  DecisionTreeEditorPage.tsx  DecisionTreeTablePage.tsx
web/src/lib/: DecisionTree.ts  iifa.client.ts  whompingWillow.client.ts
