[package]
name = "whomping-willow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
actix-web = "4.0"
actix-cors = "0.6.4"
mongodb = "2.6.0"